@@ -654,7 +654,8 @@ DEP1: $(CFILES)
 	for f in $?; do \
 	  $(MKDEP) $(INCLUDES) $(CFLAGS) $$f > DEPA; \
 	  sed -n -e '1s/\.o: .*/.lo: \\/p' -e q < DEPA >> DEP2; \
-	  sed -e '1s/.*: //' -f dep.sed < DEPA | LC_ALL=C sort | uniq | \
+	  sed -e '1s/.*: //' -f dep.sed < DEPA | \
+	    LC_ALL=C sort | LC_ALL=C uniq | \
 	    sed -e 's/^[AB]/  /' -e '$$s/ \\$$//' >> DEP2; \
 	done
 	rm -f DEPA
